--- a/SoftUniFAQSystem.Client/partials/home.html
+++ b/SoftUniFAQSystem.Client/partials/home.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-6" ng-controller="CarouselCtrl" style="width: 100%">
+    <div class="col-md-6" style="width: 100%">
         <div>
             <carousel interval="interval">
                 <slide ng-repeat="slide in slides" active="slide.active">
